Remove IntelliJ warnings